--- a/proiect-daw/Views/Groups/New.cshtml
+++ b/proiect-daw/Views/Groups/New.cshtml
@@ -5,7 +5,7 @@
         <div class="col-md-8 col-lg-6">
             <!-- Create Group Card -->
             <div class="card shadow-sm border-0 rounded-3">
-                <div class="card-header bg-light text-center py-3">
+                <div class="card-header  text-center py-3">
                     <h5 class="font-montserrat mb-0">Creează un grup</h5>
                 </div>
                 <div class="card-body">
