--- a/proiect-daw/Views/Groups/New.cshtml
+++ b/proiect-daw/Views/Groups/New.cshtml
@@ -6,7 +6,7 @@
             <!-- Create Group Card -->
             <div class="card shadow-sm border-0 rounded-3">
                 <div class="card-header  text-center py-3">
-                    <h5 class="font-montserrat mb-0">Creează un grup</h5>
+                    <h5 class="font-montserrat mb-0">Create a group</h5>
                 </div>
                 <div class="card-body">
                     <form method="post" asp-action="New" asp-controller="Groups">
