--- a/proiect-daw/Areas/Identity/Pages/Account/Register.cshtml
+++ b/proiect-daw/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row justify-content-center">
     <!-- Registration Form -->
-    <div class="col-lg-5 col-md-6 shadow-lg p-4 rounded bg-light">
+    <div class="col-lg-5 col-md-6 shadow-lg p-4 rounded ">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2 class="text-center text-secondary">Create a New Account</h2>
             <hr />
