--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -8,7 +8,7 @@
 @if (ViewBag.Message != null)
 {
     <div class="alert alert-success p-3 rounded-3 text-center mb-5 @ViewBag.Alert">
-        @Localizer["Message_Success"]: @ViewBag.Message
+        @ViewBag.Message
     </div>
 }
 <br />
@@ -18,7 +18,7 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="@Localizer["Placeholder_Search"]" name="search"
                value="@ViewBag.SearchString">
-        <button type="submit" class="btn btn-primary">
+        <button type="submit">
             <span class="transition"></span>
             <span class="gradient"></span>
             <span class="label">@Localizer["Button_Search"]</span>
@@ -60,7 +60,7 @@
                 }
 
                 @for (int i = 1; i <= ViewBag.lastPage; i++)
-                {
+                { 
                     <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
                         <a class="page-link" href="@ViewBag.PaginationBaseUrl=@i">@i</a>
                     </li>
