--- a/proiect-daw/Views/Posts/New.cshtml
+++ b/proiect-daw/Views/Posts/New.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-8 col-lg-6">
             <!-- Create Post Card -->
             <div class="card shadow-sm border-0 rounded-3">
-                <div class="card-header bg-light text-center py-3">
+                <div class="card-header text-center py-3">
                     <h5 class="font-montserrat mb-0">Create a post</h5>
                 </div>
                 <div class="card-body">
